--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Guidance Docs
-repo_url: https://github.com/mozilla-ai/blueprint-template
-repo_name: blueprint-template
+repo_url: https://github.com/mozilla-ai/osm-ai-helper
+repo_name: osm-ai-helper
 
 nav:
   - Home: index.md
