--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,15 @@ requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "blueprint"
+name = "osm-ai-helper"
 readme = "README.md"
 license = {text = "Apache-2.0"}
 requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
+  "fire",
   "loguru",
+  "requests",
   "streamlit",
 ]
 
