--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,4 +24,4 @@ repos:
     rev: v2.3.0
     hooks:
       - id: codespell
-        exclude: CODE_OF_CONDUCT.md
+        exclude: CODE_OF_CONDUCT.md|demo/|src/osm_ai_helper/upload_osm.py
