--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
   "huggingface_hub",
   "loguru",
   "requests",
+  "requests_oauthlib",
   "sam2",
+  "scikit-image",
   "shapely",
   "ultralytics"
 ]
