Try pip upgrade

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -18,6 +18,7 @@ ENV HOME=/home/user \
 
 WORKDIR $HOME/app
 
+RUN pip3 install --upgrade pip
 RUN pip3 install git+https://github.com/mozilla-ai/osm-ai-helper.git
 RUN pip3 install folium streamlit streamlit-folium
 
