--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,7 +1,7 @@
 FROM nvidia/cuda:12.2.2-cudnn8-devel-ubuntu22.04
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
-  espeak-ng \
+  libgl1 \
   build-essential \
   python3.10 \
   python3.10-dev \
